refactor/#1 디렉토리 구조 변경 및 확실한 관심사 분리